--- a/WorkProgCienciaDados.ipynb
+++ b/WorkProgCienciaDados.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "name": "WorkProgCienciaDados.ipynb",
       "provenance": [],
-      "mount_file_id": "1mOm6WK_o8CBAAdkdFoojAqatquI-aj8L",
-      "authorship_tag": "ABX9TyOwQBlsyybBbtYcxT8B9Wn/",
+      "mount_file_id": "https://github.com/albert-melo/ProgCiencia-de-Dados/blob/master/WorkProgCienciaDados.ipynb",
+      "authorship_tag": "ABX9TyNzw2pUCH8oFwIA5zxFnocV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,55 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "fQgumz3YJzd-"
+      },
+      "source": [
+        "Trabalho da Disciplina Programação para Ciência de Dados\n",
+        "\n",
+        "\n",
+        "Aluno:\n",
+        "\n",
+        "> Albert Lima de Melo\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DSPdWeTTKXNF"
+      },
+      "source": [
+        "Montagem do Drive para acesso a base de dados"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q70YVmxDKc5p",
+        "outputId": "8cb7df80-0553-4d80-9f01-1f4b8be8de59",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "zBjE6MokXB3C"
       },
       "source": [
@@ -40,18 +89,51 @@
       "cell_type": "code",
       "metadata": {
         "id": "uBNtNHFDW0cc",
-        "outputId": "6ae02567-6c92-4339-9056-d566afc1a5e8",
+        "outputId": "8855017f-3b68-4687-9e9e-8c47e7b7ff27",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 359
+          "height": 34
         }
       },
       "source": [
         "import pandas as pd\n",
         "dados = pd.read_csv(\"/content/drive/My Drive/WorkProgCD/dados-curso-completo.csv\")\n",
-        "dados.tail(10)"
+        "print(\"Registros: \", len(dados))\n"
       ],
-      "execution_count": 7,
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Registros 1658825\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RwhHloJzKvvi"
+      },
+      "source": [
+        "Inicio da Exploração da Base"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FhnYwD0XKzSI",
+        "outputId": "6dca9380-73fe-40ba-9694-99757225c864",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 589
+        }
+      },
+      "source": [
+        "dados.filter()"
+      ],
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -92,13 +174,13 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>1658815</th>\n",
-              "      <td>2020-06-02 13:40:32</td>\n",
-              "      <td>Tarcísio Greco</td>\n",
-              "      <td>tarcisiogreco23</td>\n",
-              "      <td>@CrisGalo O cidadão vive em nárnia, não tem ou...</td>\n",
+              "      <th>0</th>\n",
+              "      <td>2020-03-23 18:51:14</td>\n",
+              "      <td>Gaboardi</td>\n",
+              "      <td>fraslee</td>\n",
+              "      <td>@BolsonaroSP Cade o fundão deputado??? Congres...</td>\n",
               "      <td>0</td>\n",
-              "      <td>285</td>\n",
+              "      <td>138</td>\n",
               "      <td>pt</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -108,68 +190,84 @@
               "      <td>[]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1658816</th>\n",
-              "      <td>2020-03-12 15:39:05</td>\n",
-              "      <td>highest in the room</td>\n",
-              "      <td>leeeeets_</td>\n",
-              "      <td>ótimo dia pra contrair covid-19</td>\n",
+              "      <th>1</th>\n",
+              "      <td>2020-03-18 03:18:14</td>\n",
+              "      <td>Seu Zé da Farmácia</td>\n",
+              "      <td>seuzedafarmacia</td>\n",
+              "      <td>Em ação preventiva, o Governo do Estado suspen...</td>\n",
               "      <td>0</td>\n",
-              "      <td>497</td>\n",
+              "      <td>56</td>\n",
               "      <td>pt</td>\n",
-              "      <td>Assis</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2020-03-29 12:09:27</td>\n",
+              "      <td>Marília Oliveira 🇧🇷</td>\n",
+              "      <td>Marioliveira_gb</td>\n",
+              "      <td>Incrível como os defensores do fim do distanci...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2020-04-01 21:11:07</td>\n",
+              "      <td>🚩</td>\n",
+              "      <td>santosodeto</td>\n",
+              "      <td>Fumaça de cigarro pode propagar coronavírus? h...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1885</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2020-03-19 17:49:40</td>\n",
+              "      <td>Nova Impressão</td>\n",
+              "      <td>novaimpressao_</td>\n",
+              "      <td>🚨Todos juntos contra COVID-19💪\\n\\nSolicite seu...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>124</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>Brasília</td>\n",
               "      <td>Brazil</td>\n",
               "      <td>BR</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>-47.8778</td>\n",
+              "      <td>-15.77691</td>\n",
               "      <td>[]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1658817</th>\n",
-              "      <td>2020-04-13 18:35:12</td>\n",
-              "      <td>Partido Social Liberal - PSL</td>\n",
-              "      <td>PSL_Nacional</td>\n",
-              "      <td>Exercícios também ajudam a fortalecer a muscul...</td>\n",
-              "      <td>1</td>\n",
-              "      <td>164017</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>[]</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1658818</th>\n",
-              "      <td>2020-05-25 22:53:13</td>\n",
-              "      <td>O que houve com a couve?</td>\n",
-              "      <td>couveluiza</td>\n",
-              "      <td>@BiologiaBraba @Tati_Cordeiro Só vontade ou vo...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1883</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>[]</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1658819</th>\n",
-              "      <td>2020-04-16 23:03:45</td>\n",
-              "      <td>júlia</td>\n",
-              "      <td>iloveagpp</td>\n",
-              "      <td>Amanda, minha melhor amiga e irmã de alma há m...</td>\n",
-              "      <td>1</td>\n",
-              "      <td>5841</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>[]</td>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1658820</th>\n",
@@ -247,34 +345,36 @@
               "      <td>São Félix do Araguaia</td>\n",
               "      <td>Brazil</td>\n",
               "      <td>BR</td>\n",
-              "      <td>-53.0</td>\n",
-              "      <td>-11.0</td>\n",
+              "      <td>-53.0000</td>\n",
+              "      <td>-11.00000</td>\n",
               "      <td>[]</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>1658825 rows × 13 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
               "                        data  ...                  hashtags\n",
-              "1658815  2020-06-02 13:40:32  ...                        []\n",
-              "1658816  2020-03-12 15:39:05  ...                        []\n",
-              "1658817  2020-04-13 18:35:12  ...                        []\n",
-              "1658818  2020-05-25 22:53:13  ...                        []\n",
-              "1658819  2020-04-16 23:03:45  ...                        []\n",
+              "0        2020-03-23 18:51:14  ...                        []\n",
+              "1        2020-03-18 03:18:14  ...                        []\n",
+              "2        2020-03-29 12:09:27  ...                        []\n",
+              "3        2020-04-01 21:11:07  ...                        []\n",
+              "4        2020-03-19 17:49:40  ...                        []\n",
+              "...                      ...  ...                       ...\n",
               "1658820  2020-03-13 17:26:18  ...                        []\n",
               "1658821  2020-05-12 13:02:34  ...                        []\n",
               "1658822  2020-03-19 18:16:30  ...           ['CORONAVIRUS']\n",
               "1658823  2020-04-07 18:14:45  ...  ['BolsonaroTemRazaoSim']\n",
               "1658824  2020-06-02 16:04:51  ...                        []\n",
               "\n",
-              "[10 rows x 13 columns]"
+              "[1658825 rows x 13 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     }
