Inicio da Exploracao dos Dados

--- a/WorkProgCienciaDados.ipynb
+++ b/WorkProgCienciaDados.ipynb
@@ -6,7 +6,7 @@
       "name": "WorkProgCienciaDados.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/albert-melo/ProgCiencia-de-Dados/blob/master/WorkProgCienciaDados.ipynb",
-      "authorship_tag": "ABX9TyNzw2pUCH8oFwIA5zxFnocV",
+      "authorship_tag": "ABX9TyPjKd6TN+3coedAA6eKap3e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "uBNtNHFDW0cc",
-        "outputId": "8855017f-3b68-4687-9e9e-8c47e7b7ff27",
+        "outputId": "bcae0ff0-a0a6-4497-de70-ea22bf948ba3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -100,12 +100,12 @@
         "dados = pd.read_csv(\"/content/drive/My Drive/WorkProgCD/dados-curso-completo.csv\")\n",
         "print(\"Registros: \", len(dados))\n"
       ],
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Registros 1658825\n"
+            "Registros:  1658825\n"
           ],
           "name": "stdout"
         }
@@ -124,16 +124,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "FhnYwD0XKzSI",
-        "outputId": "6dca9380-73fe-40ba-9694-99757225c864",
+        "outputId": "e80603d0-b5d4-4205-f300-c3a9aa5aff17",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 589
+          "height": 297
         }
       },
       "source": [
-        "dados.filter()"
+        "dados.describe()"
       ],
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,224 +157,89 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>data</th>\n",
-              "      <th>usuario</th>\n",
-              "      <th>apelido</th>\n",
-              "      <th>texto</th>\n",
               "      <th>retweet</th>\n",
               "      <th>seguidores</th>\n",
-              "      <th>idioma</th>\n",
-              "      <th>lugar</th>\n",
-              "      <th>pais</th>\n",
-              "      <th>sigla</th>\n",
               "      <th>latitude</th>\n",
               "      <th>longitude</th>\n",
-              "      <th>hashtags</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>2020-03-23 18:51:14</td>\n",
-              "      <td>Gaboardi</td>\n",
-              "      <td>fraslee</td>\n",
-              "      <td>@BolsonaroSP Cade o fundão deputado??? Congres...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>138</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>[]</td>\n",
+              "      <th>count</th>\n",
+              "      <td>1.658825e+06</td>\n",
+              "      <td>1.658825e+06</td>\n",
+              "      <td>8720.000000</td>\n",
+              "      <td>8720.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2020-03-18 03:18:14</td>\n",
-              "      <td>Seu Zé da Farmácia</td>\n",
-              "      <td>seuzedafarmacia</td>\n",
-              "      <td>Em ação preventiva, o Governo do Estado suspen...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>56</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>[]</td>\n",
+              "      <th>mean</th>\n",
+              "      <td>1.978533e+02</td>\n",
+              "      <td>3.257206e+04</td>\n",
+              "      <td>-40.237583</td>\n",
+              "      <td>-11.117100</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2020-03-29 12:09:27</td>\n",
-              "      <td>Marília Oliveira 🇧🇷</td>\n",
-              "      <td>Marioliveira_gb</td>\n",
-              "      <td>Incrível como os defensores do fim do distanci...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>5</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>[]</td>\n",
+              "      <th>std</th>\n",
+              "      <td>6.337641e+03</td>\n",
+              "      <td>3.680300e+05</td>\n",
+              "      <td>20.808494</td>\n",
+              "      <td>19.169105</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2020-04-01 21:11:07</td>\n",
-              "      <td>🚩</td>\n",
-              "      <td>santosodeto</td>\n",
-              "      <td>Fumaça de cigarro pode propagar coronavírus? h...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1885</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>[]</td>\n",
+              "      <th>min</th>\n",
+              "      <td>0.000000e+00</td>\n",
+              "      <td>0.000000e+00</td>\n",
+              "      <td>-123.120400</td>\n",
+              "      <td>-37.818769</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2020-03-19 17:49:40</td>\n",
-              "      <td>Nova Impressão</td>\n",
-              "      <td>novaimpressao_</td>\n",
-              "      <td>🚨Todos juntos contra COVID-19💪\\n\\nSolicite seu...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>124</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>Brasília</td>\n",
-              "      <td>Brazil</td>\n",
-              "      <td>BR</td>\n",
-              "      <td>-47.8778</td>\n",
-              "      <td>-15.77691</td>\n",
-              "      <td>[]</td>\n",
+              "      <th>25%</th>\n",
+              "      <td>0.000000e+00</td>\n",
+              "      <td>1.010000e+02</td>\n",
+              "      <td>-47.864334</td>\n",
+              "      <td>-23.305300</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
+              "      <th>50%</th>\n",
+              "      <td>0.000000e+00</td>\n",
+              "      <td>3.800000e+02</td>\n",
+              "      <td>-43.955615</td>\n",
+              "      <td>-19.624400</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1658820</th>\n",
-              "      <td>2020-03-13 17:26:18</td>\n",
-              "      <td>broca</td>\n",
-              "      <td>whoisdrill</td>\n",
-              "      <td>oms: tamo tendo pandemia evitar\\n conglomerado...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>361</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>[]</td>\n",
+              "      <th>75%</th>\n",
+              "      <td>0.000000e+00</td>\n",
+              "      <td>1.470000e+03</td>\n",
+              "      <td>-38.453198</td>\n",
+              "      <td>-7.120700</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1658821</th>\n",
-              "      <td>2020-05-12 13:02:34</td>\n",
-              "      <td>Renato 🇧🇷</td>\n",
-              "      <td>VerdadeExpress</td>\n",
-              "      <td>@OsmarTerra Sr. Osmar Terra, gostaria de ouvir...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>4066</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>[]</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1658822</th>\n",
-              "      <td>2020-03-19 18:16:30</td>\n",
-              "      <td>eugeniocosta8</td>\n",
-              "      <td>EugenioCosta8</td>\n",
-              "      <td>CIENTISTA DE HARVARD PREVÊ QUE ATÉ 70% DO MUND...</td>\n",
-              "      <td>3</td>\n",
-              "      <td>5307</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>['CORONAVIRUS']</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1658823</th>\n",
-              "      <td>2020-04-07 18:14:45</td>\n",
-              "      <td>Wagner Mota - Seriedade + Geek</td>\n",
-              "      <td>wagnermota75</td>\n",
-              "      <td>#BolsonaroTemRazaoSim porque, quando a prefeit...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1000</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>['BolsonaroTemRazaoSim']</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1658824</th>\n",
-              "      <td>2020-06-02 16:04:51</td>\n",
-              "      <td>Fotógrafo</td>\n",
-              "      <td>omarcelogoulart</td>\n",
-              "      <td>Em meio a uma pandemia, estamos na luta também...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>726</td>\n",
-              "      <td>pt</td>\n",
-              "      <td>São Félix do Araguaia</td>\n",
-              "      <td>Brazil</td>\n",
-              "      <td>BR</td>\n",
-              "      <td>-53.0000</td>\n",
-              "      <td>-11.00000</td>\n",
-              "      <td>[]</td>\n",
+              "      <th>max</th>\n",
+              "      <td>1.139763e+06</td>\n",
+              "      <td>8.424125e+07</td>\n",
+              "      <td>174.789310</td>\n",
+              "      <td>58.257776</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>1658825 rows × 13 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "                        data  ...                  hashtags\n",
-              "0        2020-03-23 18:51:14  ...                        []\n",
-              "1        2020-03-18 03:18:14  ...                        []\n",
-              "2        2020-03-29 12:09:27  ...                        []\n",
-              "3        2020-04-01 21:11:07  ...                        []\n",
-              "4        2020-03-19 17:49:40  ...                        []\n",
-              "...                      ...  ...                       ...\n",
-              "1658820  2020-03-13 17:26:18  ...                        []\n",
-              "1658821  2020-05-12 13:02:34  ...                        []\n",
-              "1658822  2020-03-19 18:16:30  ...           ['CORONAVIRUS']\n",
-              "1658823  2020-04-07 18:14:45  ...  ['BolsonaroTemRazaoSim']\n",
-              "1658824  2020-06-02 16:04:51  ...                        []\n",
-              "\n",
-              "[1658825 rows x 13 columns]"
+              "            retweet    seguidores     latitude    longitude\n",
+              "count  1.658825e+06  1.658825e+06  8720.000000  8720.000000\n",
+              "mean   1.978533e+02  3.257206e+04   -40.237583   -11.117100\n",
+              "std    6.337641e+03  3.680300e+05    20.808494    19.169105\n",
+              "min    0.000000e+00  0.000000e+00  -123.120400   -37.818769\n",
+              "25%    0.000000e+00  1.010000e+02   -47.864334   -23.305300\n",
+              "50%    0.000000e+00  3.800000e+02   -43.955615   -19.624400\n",
+              "75%    0.000000e+00  1.470000e+03   -38.453198    -7.120700\n",
+              "max    1.139763e+06  8.424125e+07   174.789310    58.257776"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 18
         }
       ]
     }
