--- a/WorkProgCienciaDados.ipynb
+++ b/WorkProgCienciaDados.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "WorkProgCienciaDados.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOdlGRY2jEI5ENtB5lv4sIH",
+      "authorship_tag": "ABX9TyNA9E77PEWixBZlOOdR6qhw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -274,39 +274,44 @@
       "cell_type": "code",
       "metadata": {
         "id": "fhFdO9qA1p9H",
-        "outputId": "3a2ffcf0-ff84-454d-e93e-1a3b0ece2541",
+        "outputId": "14e6661d-9e8e-4a94-d795-893c11310b94",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 390
         }
       },
       "source": [
         "print(\"Colunas que compõem a base de dados: \")\n",
-        "dados.columns"
+        "dados.info()"
       ],
-      "execution_count": 115,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Colunas que compõem a base de dados: \n"
+            "Colunas que compõem a base de dados: \n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1658825 entries, 0 to 1658824\n",
+            "Data columns (total 13 columns):\n",
+            " #   Column      Non-Null Count    Dtype  \n",
+            "---  ------      --------------    -----  \n",
+            " 0   data        1658825 non-null  object \n",
+            " 1   usuario     1658768 non-null  object \n",
+            " 2   apelido     1658825 non-null  object \n",
+            " 3   texto       1658825 non-null  object \n",
+            " 4   retweet     1658825 non-null  int64  \n",
+            " 5   seguidores  1658825 non-null  int64  \n",
+            " 6   idioma      1658825 non-null  object \n",
+            " 7   lugar       74605 non-null    object \n",
+            " 8   pais        74600 non-null    object \n",
+            " 9   sigla       74595 non-null    object \n",
+            " 10  latitude    8720 non-null     float64\n",
+            " 11  longitude   8720 non-null     float64\n",
+            " 12  hashtags    1658825 non-null  object \n",
+            "dtypes: float64(2), int64(2), object(9)\n",
+            "memory usage: 164.5+ MB\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Index(['data', 'usuario', 'apelido', 'texto', 'retweet', 'seguidores',\n",
-              "       'idioma', 'lugar', 'pais', 'sigla', 'latitude', 'longitude',\n",
-              "       'hashtags'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 115
         }
       ]
     },
@@ -322,7 +327,6 @@
       },
       "source": [
         "print(\"Resumo dos dados: \")\n",
-        "\n",
         "print( dados.describe().round(2))"
       ],
       "execution_count": 116,
@@ -432,72 +436,67 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "AvrTeYKhGONu",
-        "outputId": "936b8984-3e9a-4cb5-db43-c77df4e1600c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        }
+        "id": "BheezKKpMStS"
       },
       "source": [
-        "paises = dados[\"pais\"].value_counts()\n",
+        "###Quantidade de países e comentários com geolocalização\n",
         "\n",
-        "print(\"Paises:\", len(paises))\n",
-        "\n",
-        "locais = dados[ dados[\"latitude\"].isna()==False]\n",
-        "\n",
-        "print(\"Comentários com geo localização:\", len(locais))\n"
-      ],
-      "execution_count": 121,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Paises: 121\n",
-            "Comentários com geo localização: 8720\n"
-          ],
-          "name": "stdout"
-        }
+        "A seguir segue a quantidade de países identificados a partir das postagens realizadas e a quantidade da postagens postagens que possuem geolocalização."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NGfWAzPNLnH7",
-        "outputId": "c226caeb-bc13-409f-a4b2-fb29e7660d02",
+        "id": "AvrTeYKhGONu",
+        "outputId": "5d99e81a-1163-4fad-90bb-c9076c40cfab",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 265
+          "height": 221
         }
+      },
+      "source": [
+        "paises = dados[\"pais\"].value_counts()\n",
+        "print(\"Quandidade de Países:\", len(paises))\n",
+        "locais_geo = dados[ dados[\"latitude\"].isna()==False]\n",
+        "print(\"Comentários com geo localização:\", len(locais_geo))\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-e6c7abe3e448>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpaises\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdados\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"pais\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Quandidade de Países:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpaises\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mlocais_geo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdados\u001b[0m\u001b[0;34m[\u001b[0m \u001b[0mdados\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"latitude\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Comentários com geo localização:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocais_geo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'dados' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uhg3LNaBJlUW"
+      },
+      "source": [
+        "##Instalação da bliblioteca _GeoPandas_\n",
+        "Utilizado para plotagem de dados utilizando geolocalização"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NGfWAzPNLnH7"
       },
       "source": [
         "pip install geopandas"
       ],
-      "execution_count": 122,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: geopandas in /usr/local/lib/python3.6/dist-packages (0.8.1)\n",
-            "Requirement already satisfied: pyproj>=2.2.0 in /usr/local/lib/python3.6/dist-packages (from geopandas) (2.6.1.post1)\n",
-            "Requirement already satisfied: shapely in /usr/local/lib/python3.6/dist-packages (from geopandas) (1.7.1)\n",
-            "Requirement already satisfied: fiona in /usr/local/lib/python3.6/dist-packages (from geopandas) (1.8.17)\n",
-            "Requirement already satisfied: pandas>=0.23.0 in /usr/local/lib/python3.6/dist-packages (from geopandas) (1.1.2)\n",
-            "Requirement already satisfied: click-plugins>=1.0 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (1.1.1)\n",
-            "Requirement already satisfied: cligj>=0.5 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (0.5.0)\n",
-            "Requirement already satisfied: click<8,>=4.0 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (7.1.2)\n",
-            "Requirement already satisfied: attrs>=17 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (20.2.0)\n",
-            "Requirement already satisfied: munch in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (2.5.0)\n",
-            "Requirement already satisfied: six>=1.7 in /usr/local/lib/python3.6/dist-packages (from fiona->geopandas) (1.15.0)\n",
-            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.23.0->geopandas) (2018.9)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.23.0->geopandas) (2.8.1)\n",
-            "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.23.0->geopandas) (1.18.5)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -550,7 +549,7 @@
       },
       "source": [
         "geometry  = [Point(xy) for xy in zip(locais['latitude'], locais['longitude'])]\n",
-        "gdf = GeoDataFrame(locais, geometry = geometry)\n",
+        "gdf = GeoDataFrame(locais, geometry = geometry,)\n",
         "\n",
         "world = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n",
         "gdf.plot(ax=world.plot(figsize=(20, 12)), marker = 'o', color = 'red', markersize = 15)"
