Organizando o conteúdo no Colab

--- a/WorkProgCienciaDados.ipynb
+++ b/WorkProgCienciaDados.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "WorkProgCienciaDados.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOGcExaAvUdedO4UXrbFnUp",
+      "authorship_tag": "ABX9TyOU0A99QfJvFPs0h6YW31/U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,13 +109,242 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FhnYwD0XKzSI"
+        "id": "FhnYwD0XKzSI",
+        "outputId": "17b209f3-d170-4935-b694-00dea53e3ed0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 347
+        }
       },
       "source": [
-        "dados.head()\n"
+        "dados.head(10)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>data</th>\n",
+              "      <th>usuario</th>\n",
+              "      <th>apelido</th>\n",
+              "      <th>texto</th>\n",
+              "      <th>retweet</th>\n",
+              "      <th>seguidores</th>\n",
+              "      <th>idioma</th>\n",
+              "      <th>lugar</th>\n",
+              "      <th>pais</th>\n",
+              "      <th>sigla</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>hashtags</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2020-03-23 18:51:14</td>\n",
+              "      <td>Gaboardi</td>\n",
+              "      <td>fraslee</td>\n",
+              "      <td>@BolsonaroSP Cade o fundão deputado??? Congres...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>138</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2020-03-18 03:18:14</td>\n",
+              "      <td>Seu Zé da Farmácia</td>\n",
+              "      <td>seuzedafarmacia</td>\n",
+              "      <td>Em ação preventiva, o Governo do Estado suspen...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>56</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2020-03-29 12:09:27</td>\n",
+              "      <td>Marília Oliveira 🇧🇷</td>\n",
+              "      <td>Marioliveira_gb</td>\n",
+              "      <td>Incrível como os defensores do fim do distanci...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2020-04-01 21:11:07</td>\n",
+              "      <td>🚩</td>\n",
+              "      <td>santosodeto</td>\n",
+              "      <td>Fumaça de cigarro pode propagar coronavírus? h...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1885</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2020-03-19 17:49:40</td>\n",
+              "      <td>Nova Impressão</td>\n",
+              "      <td>novaimpressao_</td>\n",
+              "      <td>🚨Todos juntos contra COVID-19💪\\n\\nSolicite seu...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>124</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>Brasília</td>\n",
+              "      <td>Brazil</td>\n",
+              "      <td>BR</td>\n",
+              "      <td>-47.8778</td>\n",
+              "      <td>-15.77691</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>2020-05-08 11:21:36</td>\n",
+              "      <td>Marcel Silvano</td>\n",
+              "      <td>marcelsilvano</td>\n",
+              "      <td>Importantes avanços! A pesquisa brasileira, a ...</td>\n",
+              "      <td>4</td>\n",
+              "      <td>2769</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>Macaé</td>\n",
+              "      <td>Brazil</td>\n",
+              "      <td>BR</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>2020-03-10 21:27:40</td>\n",
+              "      <td>Teixeira Correia</td>\n",
+              "      <td>LidadorNoticias</td>\n",
+              "      <td>(Última hora) Volta ao Alentejo: Anulada por c...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>39</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>2020-06-04 13:22:21</td>\n",
+              "      <td>Thiago Moraes</td>\n",
+              "      <td>ThiagoMoraesPB</td>\n",
+              "      <td>João Pessoa tem queda no isolamento social por...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3578</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>2020-05-07 21:32:12</td>\n",
+              "      <td>PT Brasil</td>\n",
+              "      <td>ptbrasil</td>\n",
+              "      <td>A #tvPT de hoje vai falar sobre a pandemia na ...</td>\n",
+              "      <td>10</td>\n",
+              "      <td>942696</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>['tvPT']</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>2020-03-11 20:27:49</td>\n",
+              "      <td>Niquito ;)</td>\n",
+              "      <td>NLazaroto</td>\n",
+              "      <td>O Coronavirús causou uma pandemia e eu ainda n...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>215</td>\n",
+              "      <td>pt</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>[]</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                  data              usuario  ... longitude  hashtags\n",
+              "0  2020-03-23 18:51:14             Gaboardi  ...       NaN        []\n",
+              "1  2020-03-18 03:18:14   Seu Zé da Farmácia  ...       NaN        []\n",
+              "2  2020-03-29 12:09:27  Marília Oliveira 🇧🇷  ...       NaN        []\n",
+              "3  2020-04-01 21:11:07                    🚩  ...       NaN        []\n",
+              "4  2020-03-19 17:49:40       Nova Impressão  ... -15.77691        []\n",
+              "5  2020-05-08 11:21:36       Marcel Silvano  ...       NaN        []\n",
+              "6  2020-03-10 21:27:40     Teixeira Correia  ...       NaN        []\n",
+              "7  2020-06-04 13:22:21        Thiago Moraes  ...       NaN        []\n",
+              "8  2020-05-07 21:32:12            PT Brasil  ...       NaN  ['tvPT']\n",
+              "9  2020-03-11 20:27:49           Niquito ;)  ...       NaN        []\n",
+              "\n",
+              "[10 rows x 13 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
