Reorganização do conteúdo

--- a/WorkProgCienciaDados.ipynb
+++ b/WorkProgCienciaDados.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "WorkProgCienciaDados.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOIfjNausq5x7duK+vDoUnQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +62,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +92,7 @@
         "import pandas as pd\n",
         "dados = pd.read_csv(\"/content/drive/My Drive/WorkProgCD/dados-curso-completo.csv\")\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +129,7 @@
       "source": [
         "dados.shape"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -169,7 +168,7 @@
       "source": [
         "dados.head(10)\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -418,7 +417,7 @@
       "source": [
         "dados.info()\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,7 +471,7 @@
         "descricao = descricao.transpose()\n",
         "descricao"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,7 +594,7 @@
         "dados2.drop_duplicates()\n",
         "grp_pais = dados2.groupby('pais')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -607,7 +606,7 @@
         "import matplotlib.pyplot as plt\n",
         "plt.rc('figure', figsize = (20, 10))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -628,7 +627,7 @@
         "fig.set_xlabel(\"Países\")\n",
         "fig.set_title(\"Postagens por país\", {'fontsize': 22})\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +683,7 @@
         "locais_geo = dados[ dados[\"longitude\"].isna() ==False ]\n",
         "print(\"Comentários com geo localização:\", len(locais_geo))\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,9 +716,10 @@
         }
       },
       "source": [
+        "#Necessário instalar o geopandas\n",
         "pip install geopandas"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,11 +760,12 @@
         "id": "wFkKxzWZMDVg"
       },
       "source": [
+        "#Importação das Bibliotecas\n",
         "from shapely.geometry import Point\n",
         "import geopandas as gpd\n",
         "from geopandas import GeoDataFrame "
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -778,11 +779,11 @@
         }
       },
       "source": [
+        "#Diferença entre as postagens que possuem georeferêcia\n",
         "diferencaRegistrosLocais = len(dados) - len(locais_geo)\n",
-        "\n",
         "print(\"Numero de registros sem geo localização: \", diferencaRegistrosLocais)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -810,7 +811,7 @@
         "world = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n",
         "gdf.plot(ax=world.plot(figsize=(20, 12)), marker = 'o', color = 'red', markersize = 15)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -865,7 +866,7 @@
         "    return texto[:x+1] , texto[x+1:]\n",
         "  "
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -887,7 +888,7 @@
         "  return perguntas\n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -933,7 +934,7 @@
         "#duvidasDB.to_csv(\"/content/drive/My Drive/WorkProgCD/duvidasdb.csv\", index=False)\n",
         "duvidasDB.info()"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -993,7 +994,7 @@
         "registro['usuario']=pre_perguntas.usuario[i_perguntas[1]]\n",
         "registro['usuario']\n"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1036,7 +1037,7 @@
       "source": [
         "duvidasDB = pd.read_csv(\"/content/drive/My Drive/WorkProgCD/duvidasdb.csv\")\n"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1090,7 +1091,7 @@
         "plt.figure( figsize=(100, 200))\n",
         "plt.show()\n"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
