--- a/WorkProgCienciaDados.ipynb
+++ b/WorkProgCienciaDados.ipynb
@@ -62,7 +62,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive/')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +92,7 @@
         "import pandas as pd\n",
         "dados = pd.read_csv(\"/content/drive/My Drive/dados-curso-completo.csv\")\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
       "source": [
         "dados.shape"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -167,7 +167,7 @@
       "source": [
         "dados.head(10)\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,7 +416,7 @@
       "source": [
         "dados.info()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,7 +470,7 @@
         "descricao = descricao.transpose()\n",
         "descricao"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -593,7 +593,7 @@
         "dados2.drop_duplicates()\n",
         "grp_pais = dados2.groupby('pais')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -605,7 +605,7 @@
         "import matplotlib.pyplot as plt\n",
         "plt.rc('figure', figsize = (20, 10))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -626,7 +626,7 @@
         "fig.set_xlabel(\"Países\")\n",
         "fig.set_title(\"Postagens por país\", {'fontsize': 22})\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -661,7 +661,7 @@
         "id": "BheezKKpMStS"
       },
       "source": [
-        "###1.6 Quantidade de países e comentários com geolocalização\n",
+        "##1.6 Quantidade de países e comentários com geolocalização\n",
         "\n",
         "A seguir segue a quantidade de países identificados a partir das postagens realizadas e a quantidade da postagens postagens que possuem geolocalização."
       ]
@@ -682,7 +682,7 @@
         "locais_geo = dados[ dados[\"longitude\"].isna() ==False ]\n",
         "print(\"Comentários com geo localização:\", len(locais_geo))\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,7 +717,7 @@
       "source": [
         "pip install geopandas"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,7 +762,7 @@
         "import geopandas as gpd\n",
         "from geopandas import GeoDataFrame "
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -781,7 +781,7 @@
         "print(\"Postagens que possuem geo localização: \", len(locais_geo))\n",
         "print(\"Numero de registros sem geo localização: \", diferencaRegistrosLocais)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -811,7 +811,7 @@
         "world = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n",
         "gdf.plot(ax=world.plot(figsize=(20, 12)), marker = 'o', color = 'red', markersize = 15)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -866,7 +866,7 @@
         "    return texto[:x+1] , texto[x+1:]\n",
         "  "
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -888,7 +888,7 @@
         "  return perguntas\n",
         "\n"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -933,7 +933,7 @@
         "print(\"...Finalizado\")\n",
         "duvidasDB.to_csv(\"/content/drive/My Drive/duvidasdb.csv\", index=False)\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -962,7 +962,7 @@
       "source": [
         "duvidasDB = pd.read_csv(\"/content/drive/My Drive/duvidasdb.csv\")\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -998,7 +998,7 @@
       "source": [
         "duvidasDB.shape"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1037,7 +1037,7 @@
       "source": [
         "duvidasDB.head(10)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1297,7 +1297,7 @@
       "source": [
         "duvidasDB.info()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1352,7 +1352,7 @@
       "source": [
         "duvidasDB.describe().round()\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1468,7 +1468,7 @@
         "id": "4dd6pSu30v08"
       },
       "source": [
-        "##Visualização das postagens pelo mundo\n",
+        "##3.5 Visualização das postagens pelo mundo\n",
         "Perguntas pelo mundo dos Tweets que possuem geolocalizacao"
       ]
     },
@@ -1502,7 +1502,7 @@
         "print(\"Total de perguntas com geo localização: \", len(locais_geo_duvidas))\n",
         "print(\"Numero de registros de perguntas com geo localização: \", diferencaRegistrosLocais)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1532,7 +1532,7 @@
         "world = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n",
         "gdf.plot(ax=world.plot(figsize=(20, 12)), marker='o', color='red', markersize=20);"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1556,7 +1556,7 @@
       },
       "source": [
         "\n",
-        "##Evolução das perguntas ao longo dos ano"
+        "##3.6 Evolução das perguntas ao longo dos ano"
       ]
     },
     {
@@ -1594,7 +1594,7 @@
         "plt.plot( meses, y_qtde_postagens )\n",
         "plt.show()\n"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
